--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 @import 'Static/Animate';
 @import 'Static/Emos.FW';
 @import 'Base/Shared';
+@import 'Base/plugins';
 @import 'Components/Buttons';
 @import 'Components/Form';
 @import 'Components/Section';
