--- a/Layout/Home.scss
+++ b/Layout/Home.scss
@@ -1,6 +1,8 @@
 body{
     padding-top: 42px;
     padding-bottom: 42px;
+    position: relative;
+    min-height: 100vh;
     &:after{
         content:'';
         display: block;
@@ -23,12 +25,32 @@ body{
     }
 }
 
+.page-home{
+    position: relative;
+    padding-top: 30px;
+    &:before{
+        content:'';
+        z-index: -1;
+        position: absolute;
+        display: block;
+        width: 100%;
+        height: 180px;
+        background: $colorPink;
+        top: 0;
+        left: 0;
+    }
+}
+
 @media screen and (max-width:$deviceMobile){
     body{
         padding-top: 0;
+        padding-bottom: 0;
         &:before,
         &:after{
             display: none;
         }
+    }
+    .page-home{
+        padding-top: 0;
     }
 }
