--- a/Base/Variables.scss
+++ b/Base/Variables.scss
@@ -6,8 +6,8 @@ $deviceMobileMini: 360px;
 
 // Typography
 $fontTL: "tl";
-$fontDefault: "timeburnerBold";
-$fontDefaultBold: "timeburner";
+$fontDefault: "timeburner";
+$fontDefaultBold: "timeburnerBold";
 $fontSite: "karlaRegular";
 $fontSiteBold: "karlaBold";
 $fontSiteBoldItalic: "karlaBoldItalic";
@@ -15,16 +15,8 @@ $fontSiteItalic: "karlaItalic";
 
 $fontSizeDefault: 14px;
 
-// Language
-$langTR_webOzel: "WEB'E ÖZEL";
-$langTR_renk: "RENK";
-$langTR_toplam: "TOPLAM";
-$langTR_siparis_detay: "SİPARİŞ DETAY";
-$langTR_alisveris_ozeti: "ALIŞVERİŞ ÖZETİ";
-$langTR_hosgeldin: "Merhaba";
-$langTR_cep_tel: "Cep Tel";
-$langTR_urunler: "ÜRÜNLER";
-$langTR_merhaba: 'Merhaba';
+// Language EN
+$langEN_renk: "COLOR";
 
 // Colors
 $colorDefault: #000;
