--- a/Modules/Widget.scss
+++ b/Modules/Widget.scss
@@ -8,6 +8,47 @@
         > .system-banner-item{
             display: inline-block;
             vertical-align: top;
+            .main-img{
+                position: relative;
+                overflow: hidden;
+                width: 100%;
+                img{
+                    width: 100%;
+                    opacity: 1;
+                    -webkit-transition: opacity 0.35s, -webkit-transform 0.35s;
+                    transition: opacity 0.35s, transform 0.35s;
+                    -webkit-transform: scale3d(1.05,1.05,1);
+                    transform: scale3d(1.05,1.05,1);
+                }
+                &:before{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    opacity: 0;
+                    background: rgba(255,255,255,0.5);
+                    content: '';
+                    -webkit-transition: -webkit-transform 0.6s;
+                    transition: transform 0.6s;
+                    -webkit-transform: scale3d(2.4, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
+                    transform: scale3d(2.4, 1.4, 1) rotate3d(0, 0, 1, 45deg) translate3d(0, -100%, 0);
+                    z-index: 1;
+                }
+            }
+            &:hover{
+                .main-img{
+                    img{
+                        -webkit-transform: scale3d(1,1,1);
+                        transform: scale3d(1,1,1);
+                    }
+                    &:before {
+                        opacity: 1;
+                        -webkit-transform: scale3d(2.4,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,100%,0);
+                        transform: scale3d(2.4,1.4,1) rotate3d(0,0,1,45deg) translate3d(0,100%,0);
+                    }
+                }
+            }
             &.sizeSmall {
                 width: 33.044%;
                 .align-text{
@@ -69,6 +110,7 @@
                 position: absolute;
                 z-index: 2;
                 bottom: 0;
+                @include transition(all 0.2s cubic-bezier(0.785, 0.135, 0.150, 0.860));
                 span{
                     display: block;
                     &.small-text{
@@ -94,7 +136,28 @@
                         width: 100%;
                         height: 3px;
                         bottom: -3px;
-                        left: 0;
+                        right: 0;
+                        @include transition(all 0.2s cubic-bezier(0.785, 0.135, 0.150, 0.860));
+                    }
+                    &:before{
+                        content:'';
+                        display: block;
+                        position: absolute;
+                        width: 0;
+                        height: 3px;
+                        bottom: -3px;
+                        left: -5px;
+                        @include transition(all 0.2s cubic-bezier(0.785, 0.135, 0.150, 0.860));
+                    }
+                    &:hover{
+                        &:after{
+                            width: 0%;
+                            right: -5px;
+                        }
+                        &:before{
+                            width: 100%;
+                            left: -3px;
+                        }
                     }
                 }
                 .product-img{
@@ -112,6 +175,7 @@
                         }
                         a.btn{
                             color: $colorWhite;
+                            &:before,
                             &:after{
                                 background: $colorWhite;
                             }
@@ -125,6 +189,7 @@
                         }
                         a.btn{
                             color: $colorDefault;
+                            &:before,
                             &:after{
                                 background: $colorDefault;
                             }
@@ -138,6 +203,7 @@
                         }
                         a.btn{
                             color: $colorPink;
+                            &:before,
                             &:after{
                                 background: $colorPink;
                             }
@@ -234,6 +300,9 @@
             }
         }
     }
+}
+.main-slider-wrapper{
+    position: relative;
     .swiper-button{
         &-next,
         &-prev{
@@ -254,21 +323,86 @@
             
         }
         &-next{
-            right: 0;
-            border-top-left-radius: 50%;
-            border-bottom-left-radius: 50%;
+            right: -40px;
+            border-top-right-radius: 50%;
+            border-bottom-right-radius: 50%;
             &:after{
                 content:$icon-arrow-angle-right;
             }
         }
         &-prev{
-            left:0;
-            border-top-right-radius: 50%;
-            border-bottom-right-radius: 50%;
+            left: -40px;
+            border-top-left-radius: 50%;
+            border-bottom-left-radius: 50%;
             &:after{
                 content:$icon-arrow-angle-left;
             }
         }
+    }
+    @media screen and (min-width:1250px){
+        .swiper-button{
+            display: none;
+        }
+    }
+}
+.instagram-feed{
+    position: relative;
+    width: 100%;
+    margin-top: 90px;
+    margin-bottom: 195px;
+    &-header{
+        position: relative;
+        width: 100%;
+        text-align: center;
+        span{
+            display: inline-block;
+            vertical-align: middle;
+            height: 90px;
+            line-height: 90px;
+            text-align: center;
+            margin: 0 9px;
+            font-family: $fontSite;
+            font-size: 18px;
+            &.icn{
+                position: relative;
+                width: 90px;
+                height: 90px;
+                overflow: hidden;
+                border-radius: 50%;
+                background-color: black;
+                background-image: -moz-repeating-linear-gradient(45deg, transparent, transparent 7px, white 5px, white 13px);
+                background-image: -webkit-repeating-linear-gradient(45deg, transparent, transparent 7px, white 5px, white 13px);
+                background-image: -o-repeating-linear-gradient(45deg, transparent, transparent 7px, white 5px, white 13px);
+                background-image: -ms-repeating-linear-gradient(45deg, transparent, transparent 7px, white 5px, white 13px);
+                background-image: repeating-linear-gradient(45deg, transparent, transparent 7px, white 5px, white 13px);
+                &:after{
+                    content:'';
+                    display: block;
+                    width: 70px;
+                    height: 70px;
+                    background: $colorPink;
+                    border-radius: 50%;
+                    position: absolute;
+                    top: 10px;
+                    left: 10px;
+                }
+                i{
+                    color: $colorWhite;
+                    position: absolute;
+                    font-size: 40px;
+                    top: 50%;
+                    left: 50%;
+                    z-index: 6;
+                    @include setTransform(translate(-50%,-50%));
+                }
+            }
+        }
+    }
+    &-body{
+        margin-top: 40px;
+            img{
+                width: 100%;
+            }
     }
 }
 
