--- a/Modules/Product-Detail.scss
+++ b/Modules/Product-Detail.scss
@@ -272,6 +272,9 @@
                                         overflow: hidden;
                                         background-position: center;
                                     }
+                                    .prd-name{
+                                        display: none;
+                                    }
                                 }
                             }
                         }
@@ -290,6 +293,103 @@
                         height: 70px;
                         padding: 20px 25px;
                         margin-bottom: 40px; 
+                        > span{
+                            position: relative;
+                            display: inline-block;
+                            vertical-align: top;
+                            width: 100%;
+                            .prd-color{
+                                float: left;
+                                width: 30px;
+                                height: 30px;
+                                background-size: 120%;
+                                background-position: center center;
+                                overflow: hidden;
+                                border-radius: 50%;
+                            }
+                            .prd-name {
+                                padding-left: 10px;
+                                display: inline-block;
+                                height: 30px;
+                                line-height: 30px;
+                                font-family: $fontSiteBold;
+                                font-size: 18px;
+                            }
+                            i{
+                                display: block;
+                                width: 30px;
+                                height: 30px;
+                                background: $colorPink;
+                                text-align: center;
+                                position: absolute;
+                                right: 0;
+                                top: 0;
+                                border-radius: 50%;
+                                line-height: 33px;
+                                font-size: 12px !important;
+                            }
+                        }
+                        ul{
+                            display: none;
+                            position: fixed;
+                            top: 0;
+                            left: 0;
+                            width: 100%;
+                            height: 100%;
+                            background: $colorWhite;
+                            padding-top: 80px;
+                            overflow: auto;
+                            z-index: 999;
+                            li{
+                                border-bottom: 1px solid #eee;
+                                a{
+                                    width: 100%;
+                                    height: auto;
+                                    padding: 10px 14px;
+                                    display: inline-block;
+                                    vertical-align: top;
+                                    .prd-color{
+                                        float: left;
+                                        width: 36px;
+                                        height: 36px;
+                                        border-radius: 50%;
+                                        background-size: 120%;
+                                        background-position: center;
+                                    }
+                                    .prd-name{
+                                        display: inline-block;
+                                        padding-left: 20px;
+                                        font-size: 18px;
+                                        font-family: $fontSiteBold;
+                                        line-height: 36px;
+                                    }
+                                }
+                            }
+                        }
+                        &.opened{
+                            span{
+                                position: fixed;
+                                z-index: 9999;
+                                top: 29px;
+                                right: 35px;
+                                .prd-color,
+                                .prd-code,
+                                .prd-name{
+                                    display: none;
+                                }
+                                i{
+                                    background: none;
+                                    font-size: 20px !important;
+                                    &:before{
+                                        content:$icon-close;
+                                        background: none;
+                                    }
+                                }
+                            }
+                            ul{
+                                display: block;
+                            }
+                        }
                     }
                     .color-palette-wrp{
                         margin: 0;
@@ -334,6 +434,7 @@
     .ems-prd-top-banner{display: none;} 
     .sonGezilen_header{
         margin-bottom: 40px;
+        padding: 0 20px;
         > span{
             font-family: $fontDefaultBold;
             font-size: 30px;
