--- a/Base/Shared.scss
+++ b/Base/Shared.scss
@@ -87,7 +87,7 @@ figure{margin: 0;font-size: 0;}
 		position:fixed;
 		top:0;
 		left:0;
-		z-index:10;
+		z-index:1000
 	}
 	&:before {
 		content:'';
@@ -95,9 +95,14 @@ figure{margin: 0;font-size: 0;}
 		width:100%;
 		height:100%;
 		position:fixed;
-		top:0;
-		left:0;
-		z-index:11;
+		top:50%;
+		left:50%;
+		z-index:1001;
+		max-width: 512px;
+		height: 512px;
+		@include setTransform(translate(-50%,-50%));
+		overflow: hidden;
+		border-radius: 50%;
 	}
 }
 
