--- a/Layout/Header.scss
+++ b/Layout/Header.scss
@@ -48,6 +48,16 @@ header{
         }
         .main-menu{
             margin-right: 10px;
+            .lvl-1{
+                 > li:last-child{
+                     > .sub-menu{
+                        left: initial;
+                        right: 0;
+                        border-top-right-radius: 0;
+                        border-top-left-radius: 10px;
+                     }
+                 }
+            }
         }
     }
     @media screen and (min-width:$deviceMobile){
