--- a/Modules/Product-Detail.scss
+++ b/Modules/Product-Detail.scss
@@ -279,6 +279,18 @@
                             }
                         }
                     }
+                    .new-color-name {
+                        margin: 0 auto 20px;
+                        max-width: 600px;
+                        text-align: left;
+                        padding: 0 15px;
+                        font-size: 15px;
+                        font-family: $fontSite;
+                        &:before {
+                            content: 'Color: ';
+                            margin-bottom: 20px;
+                        }
+                    }
                 }               
                 @media screen and (max-width: $deviceMobile){
                     width: 100%;
