--- a/Layout/Header.scss
+++ b/Layout/Header.scss
@@ -43,7 +43,7 @@ header{
         padding-left: 130px;
         position: relative;
         > [id^="lblBanner"]{
-            width: initial;
+            width: auto;
             max-width: 100%;
         }
         .main-menu{
